<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.elea.activities.JobDetailsActivity">

    <TextView
        style="@style/ActivityTitle"
        android:id="@+id/jobDetailsMainTitle"
        android:text="TITULO PPALz"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/NormalText"
        android:id="@+id/jobDetailsTitleText"
        android:text="@string/job_details_title_text"
        android:layout_below="@+id/jobDetailsMainTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobDetailsTitleValue"
        android:layout_below="@+id/jobDetailsTitleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:width="250dp" />


    <TextView
        style="@style/NormalText"
        android:text="@string/job_details_description_text"
        android:id="@+id/jobDetailsDescriptionText"
        android:layout_below="@+id/jobDetailsTitleValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/jobDetailsDescriptionValue"
        android:layout_below="@+id/jobDetailsDescriptionText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/NormalText"
        android:id="@+id/tv_provincia"
        android:text="@string/job_details_province_text"
        android:layout_below="@+id/jobDetailsDescriptionValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/sp_provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/job_details_province_prompt"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_provincia"
        android:layout_alignLeft="@+id/tv_provincia"
        android:layout_alignStart="@+id/tv_provincia"
        />

    <TextView
        style="@style/NormalText"
        android:id="@+id/tv_localidad"
        android:text="@string/job_details_town_text"
        android:layout_below="@+id/sp_provincia"
        android:layout_alignLeft="@+id/sp_provincia"
        android:layout_alignStart="@+id/sp_provincia" />

    <Spinner
        android:id="@+id/sp_localidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/job_details_town_prompt"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_localidad"
        android:layout_alignLeft="@+id/tv_localidad"
        android:layout_alignStart="@+id/tv_localidad"
        android:layout_alignRight="@+id/sp_provincia"
        android:layout_alignEnd="@+id/sp_provincia" />



    <TextView
        style="@style/NormalText"
        android:text="@string/job_details_payment_mode_text"
        android:id="@+id/jobDetailsPaymentModeText"
        android:layout_below="@+id/sp_localidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:id="@+id/paymentModeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/job_details_payment_mode_default_text"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/jobDetailsPaymentModeText"
        android:layout_alignLeft="@+id/jobDetailsPaymentModeText"
        android:layout_alignStart="@+id/jobDetailsPaymentModeText"
         />

    <TextView
        style="@style/NormalText"
        android:text="@string/job_details_amount_text"
        android:id="@+id/jobDetailsAmountText"
        android:layout_below="@+id/paymentModeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <EditText
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/jobDetailsAmountValue"
        android:layout_alignBottom="@+id/jobDetailsAmountText"
        android:layout_toRightOf="@+id/jobDetailsAmountText"
        android:layout_alignRight="@+id/jobDetailsMainTitle"
        android:layout_alignEnd="@+id/jobDetailsMainTitle" />

    <TextView
        style="@style/NormalText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/common_currency"
        android:id="@+id/currencyText"
        android:layout_alignBottom="@+id/jobDetailsAmountText"
        android:layout_toRightOf="@+id/jobDetailsAmountValue"
        android:layout_toEndOf="@+id/jobDetailsAmountValue" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_details_demand_radio"
        android:id="@+id/jobDetailsDemandRadioButton"
        android:checked="true"
        android:layout_below="@+id/jobDetailsAmountValue"
        android:layout_marginTop="22dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_details_offer_radio"
        android:id="@+id/jobDetailsOfferRadioButton"
        android:layout_alignTop="@+id/jobDetailsDemandRadioButton"
        android:layout_alignRight="@+id/jobDetailsTitleValue"
        android:layout_alignEnd="@+id/jobDetailsTitleValue" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_details_is_active"
        android:checked="true"
        android:id="@+id/isActiveCheckBox"
        android:layout_below="@+id/jobDetailsOfferRadioButton"/>

    <Button
        style="@style/NormalTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_save"
        android:id="@+id/jobDetailsSaveButton"
        android:layout_below="@+id/jobDetailsOfferRadioButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>




</RelativeLayout>
</ScrollView>