<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.elea.activities.account.UserProfileActivity">

    <EditText
        style="@style/NormalText"
        android:id="@+id/profileEmail"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/user_profile_email"
        android:inputType="text" />

    <EditText
        style="@style/NormalText"
        android:id="@+id/profilePassword"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/profileEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/NormalText"
        android:id="@+id/profilePasswordConfirm"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/profilePassword"
        android:hint="@string/register_password_confirm"
        android:inputType="textPassword"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="30dip" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_email_notification"
        android:checked="true"
        android:id="@+id/emailNotifCheckBox"
        android:layout_below="@+id/profilePasswordConfirm"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_device_notification"
        android:checked="true"
        android:id="@+id/deviceNotifCheckBox"
        android:layout_below="@+id/emailNotifCheckBox"/>

    <Button
        style="@style/NormalTextButton"
        android:id="@+id/btnProfileSave"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/user_profile_save"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip" android:paddingRight="15dip"
        android:layout_alignTop="@+id/btnProfileCancel"
        android:layout_alignRight="@+id/deviceNotifCheckBox"
        android:layout_alignEnd="@+id/deviceNotifCheckBox"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp" />

    <Button
        style="@style/NormalTextButton"
        android:id="@+id/btnProfileCancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/user_profile_cancel"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip" android:paddingRight="15dip"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/deviceNotifCheckBox"
        android:layout_toRightOf="@+id/btnProfileSave"
        android:layout_toEndOf="@+id/btnProfileSave" />

</RelativeLayout>
