<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/main_menu_search_toggle_button"
        android:textOff="@string/main_menu_search_toggle_button"
        android:id="@+id/demandToggleButton"
        android:checked="true"
        android:layout_alignBaseline="@+id/offerToggleButton"
        android:layout_alignBottom="@+id/offerToggleButton"
        android:layout_toLeftOf="@+id/offerToggleButton"
        android:layout_toStartOf="@+id/offerToggleButton" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/main_menu_offer_toggle_button"
        android:textOff="@string/main_menu_offer_toggle_button"
        android:id="@+id/offerToggleButton"
        android:layout_marginTop="55dp"
        android:checked="false"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/main_menu_de_text"
        android:id="@+id/deText"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/demandToggleButton"
        android:layout_alignLeft="@+id/demandToggleButton"
        android:layout_alignStart="@+id/demandToggleButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchText"
        android:layout_toRightOf="@+id/deText"
        android:layout_alignTop="@+id/deText"
        android:layout_alignRight="@+id/offerToggleButton"
        android:layout_alignEnd="@+id/offerToggleButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/main_menu_en_text"
        android:id="@+id/enText"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/deText"
        android:layout_alignLeft="@+id/deText"
        android:layout_alignStart="@+id/deText" />


    <TextView
        android:id="@+id/tv_provincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_province_text"
        android:layout_below="@+id/enText"
        android:layout_alignLeft="@+id/enText"
        android:layout_alignStart="@+id/enText" />

    <Spinner
        android:id="@+id/sp_provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/main_menu_province_prompt"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_provincia"
        android:layout_alignLeft="@+id/tv_provincia"
        android:layout_alignStart="@+id/tv_provincia"
        android:layout_alignRight="@+id/searchText"
        android:layout_alignEnd="@+id/searchText" />

    <TextView
        android:id="@+id/tv_localidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_town_text"
        android:layout_below="@+id/sp_provincia"
        android:layout_alignLeft="@+id/sp_provincia"
        android:layout_alignStart="@+id/sp_provincia" />

    <Spinner
        android:id="@+id/sp_localidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/main_menu_town_prompt"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_localidad"
        android:layout_alignLeft="@+id/tv_localidad"
        android:layout_alignStart="@+id/tv_localidad"
        android:layout_alignRight="@+id/sp_provincia"
        android:layout_alignEnd="@+id/sp_provincia" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_search_button_text"
        android:drawableLeft="@drawable/ic_search"
        android:id="@+id/searchButton"
        android:layout_below="@+id/sp_localidad"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_init_session_button_text"
        android:drawableLeft="@drawable/ic_init_session"
        android:id="@+id/initSessionButton"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/initSessionButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
