<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegisterActivity">

    <EditText
        style="@style/NormalText"
        android:id="@+id/registerEmail"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/register_email"
        android:inputType="text" />

    <EditText
        style="@style/NormalText"
        android:id="@+id/registerEmailConfirm"
        android:layout_marginTop="15dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/registerEmail"
        android:hint="@string/register_email_confirm"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/NormalText"
        android:id="@+id/registerPassword"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/registerEmailConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/NormalText"
        android:id="@+id/registerPasswordConfirm"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/registerPassword"
        android:hint="@string/register_password_confirm"
        android:inputType="textPassword"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="30dip" />

    <Button
        style="@style/NormalTextButton"
        android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/register_register_button"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip" android:paddingRight="15dip"
        android:layout_below="@+id/registerPasswordConfirm"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/NormalText"
        android:id="@+id/link_to_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_login_text"
        android:gravity="center"
        android:textSize="20dip"
        android:textColor="#0b84aa"
        android:layout_below="@+id/btnRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />




</RelativeLayout>
